# public/assets/apidocs/swagger_v2.json
@@ -770,6 +770,13 @@
             "required": false,
             "description": "The state that you'd like to search for, separated by comma if you want to search for multiple (i.e. 'California, Washington'. Default is full data set",
             "type": "string"
+          },
+          {
+            "name": "lastdays",
+            "in": "query",
+            "default": 30,
+            "description": "Number of days to return. Use 'all' for the full data set (e.g. 15, all, 24)",
+            "type": "string"
           }
         ],
         "summary": "Get State Data",
@@ -795,6 +802,13 @@
             "in": "path",
             "required": false,
             "description": "The county that you'd like to search for, separated by comma if you want to search for multiple (i.e. 'Alameda, Humboldt'). Default is full data set",
+            "type": "string"
+          },
+          {
+            "name": "lastdays",
+            "in": "query",
+            "default": 30,
+            "description": "Number of days to return. Use 'all' for the full data set (e.g. 15, all, 24)",
             "type": "string"
           }
         ],
