# routes/v2/apiNYT.js
@@ -1,12 +1,17 @@
 // eslint-disable-next-line new-cap
 const router = require('express').Router();
-const { nytCounties, nytStates, nytNationwide } = require('../../utils/cache');
+const { nytCounties, nytStates, nytNationwide } = require('../../utils/apiNYTHelper');
+const { redis, keys } = require('../../routes/instances');
 
-router.get('/v2/nyt/states', async (req, res) => res.send(nytStates()));
+router.get('/v2/nyt/states', async (req, res) => {
+	const { lastdays } = req.query;
+	res.send(await nytStates(lastdays, keys.nyt_states, redis));
+});
 
 router.get('/v2/nyt/states/:state', async (req, res) => {
 	const { state: queryState } = req.params;
-	const data = nytStates();
+	const { lastdays } = req.query;
+	const data = await nytStates(lastdays, keys.nyt_states, redis);
 	if (queryState) {
 		const stateArr = queryState.trim().split(/,[\s+]?/).map((state) => state.toLowerCase());
 		const stateData = data.filter(({ state }) => stateArr.includes(state.toLowerCase()));
@@ -19,11 +24,15 @@ router.get('/v2/nyt/states/:state', async (req, res) => {
 	}
 });
 
-router.get('/v2/nyt/counties', async (req, res) => res.send(nytCounties()));
+router.get('/v2/nyt/counties', async (req, res) => {
+	const { lastdays } = req.query;
+	res.send(await nytCounties(lastdays, keys.nyt_counties, redis));
+});
 
 router.get('/v2/nyt/counties/:county', async (req, res) => {
 	const { county: queryCounty } = req.params;
-	const data = nytCounties();
+	const { lastdays } = req.query;
+	const data = await nytCounties(lastdays, keys.nyt_counties, redis);
 	if (queryCounty) {
 		const countyArr = queryCounty.trim().split(/,[\s+?]/).map((county) => county.toLowerCase());
 		const countyData = data.filter(({ county }) => countyArr.includes(county.toLowerCase()));
@@ -36,6 +45,6 @@ router.get('/v2/nyt/counties/:county', async (req, res) => {
 	}
 });
 
-router.get('/v2/nyt/usa', async (req, res) => res.send(nytNationwide()));
+router.get('/v2/nyt/usa', async (req, res) => res.send(await nytNationwide(keys.nyt_USA, redis)));
 
 module.exports = router;
